k8s/api-service.yaml
# ==============================================================================
# API — Service (expõe a API para acesso externo via LoadBalancer AWS)
# ==============================================================================
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: techchallenge
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: techchallenge
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: api
  ports:
    - port: 80            # porta pública (HTTP padrão)
      targetPort: 8080     # porta do container
      protocol: TCP
      name: http
